syntax = "proto3";

package deimos;

enum PodState {
    DISABLED = 0;
    PAUSED   = 1;
    ENABLED  = 2;
    TRANSIT  = 3;
}

// Brief description of a container to inform clients of the existence and/or updates to managed containers
message PodBrief {
    // ID of the container used to identify it in calls
    string id = 1;
    // User-facing title to present in UI
    string title = 2;
    // Up status of the container
    PodState state = 3;
}
