syntax = "proto3";

package deimos;

import "pod.proto";

message QueryPodsRequest {}

message QueryPodsResponse {
    repeated PodBrief pods = 1;
}
