syntax = "proto3";

package deimos;

import "pod.proto";

message PodStatusStreamRequest {}

message PodStatusNotification {
    string id = 1;
    PodState up_state = 2;
}
